fixed degrees of freedom in seminar 2

--- a/seminars/R2/StateEstimation.ipynb
+++ b/seminars/R2/StateEstimation.ipynb
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "# number of measurement\n",
-    "n = size(Measurements)[1]\n",
+    "n = size(Measurements)[1] - (2 * length(Buses) - 1)\n",
     "# define χ^2\n",
     "d = Chisq(n)\n",
     "# define several confidence levels\n",
