--- a/seminars/R2/StateEstimation.ipynb
+++ b/seminars/R2/StateEstimation.ipynb
@@ -279,15 +279,15 @@
     "n = size(Measurements)[1] - (2 * length(Buses) - 1)\n",
     "# define χ^2\n",
     "d = Chisq(n)\n",
-    "# define several confidence levels\n",
-    "conf_lvls = [0.1, 0.05, 0.01]\n",
-    "cdf_conf = [quantile(d, 1-cl) for cl in conf_lvls]\n",
+    "# define several significance levels\n",
+    "sign_lvls = [0.1, 0.05, 0.01]\n",
+    "cdf_sign = [quantile(d, 1-sl) for sl in sign_lvls]\n",
     "#plot cdf\n",
     "xs = collect(0:0.001:25)\n",
     "cdfs = [cdf(d, x) for x in xs]\n",
     "plot(xs, cdfs, label=\"CDF\")\n",
-    "for i in 1:length(cdf_conf)\n",
-    "    vline!([cdf_conf[i]], linewidth=2, linestyle=:dashdot, label=string(conf_lvls[i]) * \" significance <=> \" * string(1-conf_lvls[i]) * \"confidence\")\n",
+    "for i in 1:length(cdf_sign)\n",
+    "    vline!([cdf_sign[i]], linewidth=2, linestyle=:dashdot, label=string(sign_lvls[i]) * \" significance <=> \" * string(1-sign_lvls[i]) * \"confidence\")\n",
     "end\n",
     "vline!([parseRes(\"J\")], linewidth=2, linestyle=:dash, label=\"Our objective value\")\n",
     "plot!(xlabel=\"x\")\n",
