Computer Lab 2: slack bus

--- a/seminars/R2/StateEstimation_filled.ipynb
+++ b/seminars/R2/StateEstimation_filled.ipynb
@@ -404,6 +404,9 @@
     "                            QL[Buses, Buses]\n",
     "                        end)\n",
     "    # Define constraints\n",
+    "    \n",
+    "    #Slack Bus\n",
+    "    @constraint(StateEst, δ[1] == 0.0)\n",
     "    #Active power injections\n",
     "    @NLconstraint(StateEst, Pinj[i in Buses],\n",
     "                            P[i] == V[i] * sum(V[j] * (GL[i,j] * cos(δ[i] - δ[j]) + BL[i,j] * sin(δ[i] - δ[j])) for j in Buses) )\n",
